# gIDE

./: AUTHORS  Makefile.am  NEWS  README  README.markdown  autogen.sh  configure.ac
pixmaps/: Makefile.am
src/: Makefile.am  configuration_manager.cc  configuration_manager.hh  gide.cc  gide.hh  main.cc  options.hh  preferences_dialog.cc  preferences_dialog.hh
src/console/: Makefile.am  build_output.cc  build_output.hh  terminal.cc  terminal.hh
src/document/: Makefile.am  document.cc  document.hh  document_label.cc  document_label.hh  glade_document.cc  glade_document.hh  source_document.cc  source_document.hh
src/project/: Makefile.am  add_dialog.cc  add_dialog.hh  create_dialog.cc  create_dialog.hh  project.cc  project.hh  properties_dialog.cc  properties_dialog.hh  template.cc  template.hh  template_manager.cc  template_manager.hh
templates/: Makefile.am  blank.template  c-makefile.template  cpp-autotools.template  cpp-makefile.template
ui/: Makefile.am  main.glade  misc.glade  project.glade
